# rp2040-multicore-per-cpu

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
examples/: multicore_percore_data.rs
src/: lib.rs
